--- a/contents_zone.css
+++ b/contents_zone.css
@@ -22,7 +22,7 @@
     align-self: baseline;
 }
 #content_zone{
-    background-color: #dddddd;
+    background-color: #eeeeee;
     display: grid;
     grid-template-rows: 50px 50px 20px 600px;
     grid-column: 2/4;
@@ -41,7 +41,7 @@
     align-items: center;
 }
 .cat_li:hover{
-    background-color: #7b7b7b;
+    color: #0f00dc;
 }
 #main_content{
     grid-row: 4;
