--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 }
 #header{
     height: 80px;
-    background-color: antiquewhite;
+    background-color: white;
     display: grid;
     grid-template-columns: 40px auto 380px 45px 120px 40px;
 }
@@ -12,7 +12,7 @@
     grid-column: 2;
     height: 40px;
     width: 140px;
-    background-color: blueviolet;
+    background-color: #68c576;
     margin-top: 20px;
     border-radius: 10px;
 }
@@ -23,16 +23,19 @@
     border: 0px;
     border-radius: 10px;
     padding: 0px 10px;
+    outline: none;
+    background-color: #e9e9e9;
 }
 #login_btn{
     display : flex;
     margin-top: 20px;
     grid-column: 5;
-    background-color: blueviolet;
+    background-color: #68c576;
     height: 40px;
     align-items: center;
     justify-content: center;
     border-radius: 10px;
+    color: #e6ffea;
 }
 #main_content{
     display: flex;
@@ -41,9 +44,15 @@
 }
 #lnb{
     display: inline-block;
-    background-color: #DDDDDD;
+    background-color: #e6ffea;
     width: 250px;
     height: calc(100vh - 100px);
+}
+#project_over{
+    font-size: 20px;
+    font-weight: 700;
+    margin-left: 20px;
+    margin-top: 40px;
 }
 #category{
     margin-top: 30px;
@@ -55,10 +64,9 @@
 #category *{
     cursor: pointer;
 }
-#category ul{
-    list-style: none;
-    margin-left: 10px;
-    display: block;
+.main_cat{
+    margin-bottom: 8px;
+    font-size: 16px;
 }
 .arrow_mark{
     display: inline-block;
@@ -66,4 +74,13 @@
 .f_c{
     display: flex;
     justify-content: space-between;
+}
+.s_c{
+    margin-top: 7.5px;
+    list-style: none;
+    margin-left: 25px;
+    display: block;
+}
+.s_c *{
+    margin-bottom: 7.5px;
 }
