--- a/main.css
+++ b/main.css
@@ -2,11 +2,16 @@
     padding: 0;
     margin: 0;
 }
+body{
+    
+    background-color: #e6ffea;
+}
+
 #header{
     height: 80px;
     background-color: white;
     display: grid;
-    grid-template-columns: 40px auto 380px 45px 120px 40px;
+    grid-template-columns: 40px 140px auto 380px 45px 120px 40px;
 }
 #main_logo{
     grid-column: 2;
@@ -18,7 +23,7 @@
 }
 #search_{
     margin-top: 20px;
-    grid-column: 3;
+    grid-column: 4;
     height: 40px;
     border: 0px;
     border-radius: 10px;
@@ -29,7 +34,7 @@
 #login_btn{
     display : flex;
     margin-top: 20px;
-    grid-column: 5;
+    grid-column: 6;
     background-color: #68c576;
     height: 40px;
     align-items: center;
@@ -44,15 +49,24 @@
 }
 #lnb{
     display: inline-block;
-    background-color: #e6ffea;
+    background-color: #EEEEEE;
     width: 250px;
-    height: calc(100vh - 100px);
+    height: calc(100vh - 80px);
 }
-#project_over{
+#project_logo{
+    display: inline-block;
+    height: 24px;
+    width: 24px;
+    background-color: aqua;
+    margin-right: 10px;
+}
+#project_over{ 
+    display: flex;
     font-size: 20px;
-    font-weight: 700;
+    font-weight: 600;
     margin-left: 20px;
     margin-top: 40px;
+    align-items: center;
 }
 #category{
     margin-top: 30px;
@@ -60,12 +74,14 @@
     font-size: 16px;
     list-style: none;
     width: 210px;
+    
 }
 #category *{
     cursor: pointer;
+    font-size: 18px;
 }
 .main_cat{
-    margin-bottom: 8px;
+    margin-bottom: 16px;
     font-size: 16px;
 }
 .arrow_mark{
@@ -79,7 +95,7 @@
     margin-top: 7.5px;
     list-style: none;
     margin-left: 25px;
-    display: block;
+    display: none;
 }
 .s_c *{
     margin-bottom: 7.5px;
